# asr-transcribe

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.cpu  Dockerfile.gpu  NOTE.md  README.md  docker-compose.cpu.yml  docker-compose.gpu.yml  pyproject.toml  requirements-gpu.txt  requirements.txt
.claude/: settings.local.json
.claude/plans/: linear-knitting-jellyfish.md
app/: __init__.py  config.py  main.py
app/api/: routes.py
app/services/: __init__.py  audio_service.py  pathumma_service.py  typhoon_service.py
app/utils/: formatter.py  logger.py
