[project]
name = "asr-transcribe"
version = "1.0.0"
description = "ASR Stereo Transcription API with Thai models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    # FastAPI and server
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",

    # Audio processing
    "soundfile==0.12.1",
    "numpy==1.24.3",

    # ASR models
    "transformers>=4.53.0,<4.57.0",  # Compatible with torch 2.1.1 and typhoon-asr
    "torch>=2.3.0",  # Updated for transformers compatibility
    "faster-whisper==1.1.0",  # Updated to newer version that supports av>=12
    "accelerate==0.24.1",
    "typhoon-asr",  # For Typhoon ASR Real-Time model
    "pyarrow>=15.0.0,<18.0.0",  # Compatible with nemo-toolkit

    # Utilities
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
gpu = [
    "torch==2.1.1",  # Will be installed with CUDA from extra index
]

dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.1",
    "black==23.11.0",
    "ruff==0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
# Extra index URLs for PyTorch with CUDA
extra-index-url = ["https://download.pytorch.org/whl/cu118"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
